# nio-jma

./: .gitignore  637_l1.csv  637_l2.csv  ModelSelectionAblNio.py  ModelSelectionBorn.py  README.md  RunNio.py  RunNioAbl.py  __init__.py  pyproject.toml  requirements.txt  run_nio_config.py  setup.py
Problems/: Helm32L.py  HelmMoreInc.py  HelmRandom.py  StyleData.py
Scattering/: 637_l1.csv  637_l2.csv  README.md  fno_tune.py  test.py  test2.py  tuning.sh
born_farfield_run1/: branch_architecture.txt  denseblock_architecture.txt  errors.txt  events.out.tfevents.1752611155.kechen-ml.math.udel.edu.116737.0  fno_architecture.txt  size.txt  training_properties.txt  trunk_architecture.txt
core/: __init__.py
example/: events.out.tfevents.1751935532.kechen-ml.math.udel.edu.305032.0  events.out.tfevents.1751935613.kechen-ml.math.udel.edu.305657.0  events.out.tfevents.1751935886.kechen-ml.math.udel.edu.308568.0  events.out.tfevents.1751935935.kechen-ml.math.udel.edu.309020.0  events.out.tfevents.1751936020.kechen-ml.math.udel.edu.309619.0  events.out.tfevents.1751936061.kechen-ml.math.udel.edu.310033.0  events.out.tfevents.1751936197.kechen-ml.math.udel.edu.310845.0  events.out.tfevents.1751936392.kechen-ml.math.udel.edu.311944.0  events.out.tfevents.1751936541.kechen-ml.math.udel.edu.312882.0  events.out.tfevents.1751936566.kechen-ml.math.udel.edu.313229.0  events.out.tfevents.1751936584.kechen-ml.math.udel.edu.313561.0  events.out.tfevents.1751936653.kechen-ml.math.udel.edu.314093.0  events.out.tfevents.1751936704.kechen-ml.math.udel.edu.314548.0
training/: __init__.py  (+1 more)
(+79 files in other folders)
