[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nio-jma"
version = "0.1.0"
description = "Neural Inverse Operators"
authors = [
    {name="Jonathan Ma", email="johnma@udel.edu"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "scipy>=1.5.0",
    "h5py>=2.10.0",
    "tqdm>=4.50.0",
    "pyyaml>=5.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.910",
    "flake8>=3.9.0",
    "pre-commit>=2.13.0",
]

[project.urls]
"Homepage" = "https://github.com/jma02/nio-jma"
"Bug Tracker" = "https://github.com/jma02/nio-jma/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*", "training*", "data*"]
namespaces = true

tool.black.line-length = 88
tool.black.target-version = ["py37"]
tool.isort.profile = "black"
tool.isort.line_length = 88
